сверстал блок inrto

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,24 @@
     </div>
   </header>
   <section class="intro">
-
+    <div class="intro__overlay"></div>
+    <div class="intro__text">
+      <h1 class="intro__text--title">
+        <span>Первая</span> образовательная онлайн-платформа, созданная преподами!
+      </h1>
+      <div class="intro__text--description">
+        Описание уникального торгового предложения или же описание названия того или иного продукта, который на первом экране
+      </div>
+      <button class="intro__text--button button">
+        Зарегистрироваться
+      </button>
+    </div>
+    <div class="intro__footer">
+      <div class="intro__footer--image"></div>
+      <div class="intro__footer--decsription">
+        Подробнее ниже
+      </div>
+    </div>
   </section>
 </body>
 </html>
